--- a/index.html
+++ b/index.html
@@ -1,57 +1,32 @@
 <!-- To-Do:
-    - Make favicon
-    - Import logo image
-    - Add to css
+    - Finish design
 -->
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gracie's Hanger</title>
+        <title>Joshua Brunscheen</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@700&display=swap" rel="stylesheet">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->  
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="resources/styles.css">  
         <!-- <link rel="icon" type="image/x-icon" href="resources/pw_favicon.ico"> -->
     </head>
     <body>
-        <header>
-            <!-- logo -->
-            <img id="logo" src = "resources/GHLogo.svg" alt="Gracie's Hanger Logo"/>
-            <!-- brand -->
-            <h1>Gracie's Hanger</h1> 
-        </header>
-        
-        <!-- navigation -->
-        <div id="nav">
-            <ul>
-                <li><a>resources</a></li>
-                <li><a>contact</a></li>
-            </ul>
-        </div>  
-
-        <!-- intro -->
-        <h2>Running a small business online since (SOME YEAR).</h2>
-        <img class="shadow" src="resources/profile.jpg" alt="Profile Picture">
-        <p>Fast fashion companies contribute to tons of cloth waste every year. It’s time we shift our focus towards recycling oftentimes brand new clothing and making a buck or two off of it. 
-
-            Join me in my second hand reselling journey, where you too can learn how to set up shop. </p>
-
-        <hr>
-
-        <div class="info">
-            <a>LinkedIn</a>
-            <a>Instagram</a>
-            <a>YouTube</a>
+        <h1>
+            Joshua Brunscheen
+        </h1>  
+        <hr class="top">
+        <div class="links">
+            <a class="first">Resume</a>
+            <a class="second">Projects</a>
+            <a class="third">Skills</a>
+            <a class="fourth">Experience</a>
+            <a class="fifth">Contact</a>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        <div class="info"></div>
-
-        <hr>
         
-        <h2>Resources</h2>
-        <img id="design" src="resources/design.svg" width="333" height="326">
+        <hr class="bottom">
     </body>
 </html>
