Updated animations for resume

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,35 +1,29 @@
-<!-- To-Do:
-    - Finish design
--->
 <!DOCTYPE html>
 <html>
     <head>
         <title>Joshua Brunscheen</title>
-        <meta name="description" content="This is a portfolio website for Joshua Brunscheen, a computer science and itws dual major at RPI.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="resources/styles.css">  
+        <link rel="stylesheet" href="../resources/styles.css">  
         <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     </head>
     <body>
-        <h1>
-            Joshua Brunscheen
-        </h1>  
-
-        <hr class="top">
-
-        <div class="links">
-            <a class="first" href="resume/resume.html">Resume</a>
-            <a class="second">Projects</a>
-            <a class="third">Skills</a>
-            <a class="fourth">Experience</a>
-            <a class="fifth">Contact</a>
+        <div id="container">
+            <div>
+                <h1 class="resumePage">Highlights</h1>
+                <h2 class="first">- CS and ITWS Dual Major</h2>
+                <h2 class="second">- A in Data Structures</h2>
+                <h2 class="third">- Kaneland 2022 Salutatorian</h2>
+                <a class="fourth resumePage" href="JoshuaBrunscheenResume2023.pdf" download>(resume pdf download)</a>
+            </div>
+            
+            <img id="resume" src="resume.png" alt="Joshua Brunscheen's resume" width="525.75" height="679.5"> 
         </div>
+        
 
-        <hr class="bottom">
     </body>
 </html>
