Updated SEO Meta Data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
     <head>
         <title>Joshua Brunscheen</title>
+        <meta name="keywords" content="Brunscheen,Joshua,Josh,RPI,Kaneland,Portfolio,Design,Software">
         <meta name="description" content="This is a portfolio website for Joshua Brunscheen, a computer science and itws dual major at RPI.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -25,7 +26,7 @@
         <div class="links">
             <a class="first" href="resume/resume.html">Resume</a>
             <a class="second">Projects</a>
-            <a class="third">Skills</a>
+            <a class="third">Bio</a>
             <a class="fourth">Experience</a>
             <a class="fifth">Contact</a>
         </div>
