Updated contact page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="second">Projects</a>
             <a class="third">Bio</a>
             <a class="fourth">Experience</a>
-            <a class="fifth">Contact</a>
+            <a class="fifth" href="contact/contact.html">Contact</a>
         </div>
 
         <hr class="bottom">
