Fixed index page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <a class="first" href="resume/resume.html">Resume</a>
             <a class="second">Projects</a>
             <a class="third">Bio</a>
-            <a class="fourth">Experience</a>
-            <a class="fifth" href="contact/contact.html">Contact</a>
+            <a class="fourth" href="contact/contact.html">Contact</a>
         </div>
 
         <hr class="bottom">
