Updated contact page

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -10,14 +10,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="../resources/styles.css">  
         <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script type="text/javascript" src="../resources/projects.js"></script>
     </head>
     <body class="contact">
-        <div class="verticallyCentered">
-            <h1 class="contactPage">Contact me at:</h1>
-            <a class="center right" href="https://www.linkedin.com/in/joshua-brunscheen/">LinkedIn</a>
-            <a class="center left" href="https://github.com/josh-brunscheen">GitHub</a>
-            <h2 class="center right">josh.brunscheen@gmail.com</h2>  
-        </div>
             
     </body>
 </html>
+
+
