Started projects page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../resources/styles.css">  
         <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     </head>
-    <body class="contact">
+    <body>
         <div class="verticallyCentered">
             <h1 class="contactPage">Contact me at:</h1>
             <a class="center right" href="https://www.linkedin.com/in/joshua-brunscheen/">LinkedIn</a>
