--- a/projects/projects.html
+++ b/projects/projects.html
@@ -11,10 +11,13 @@
         <link rel="stylesheet" href="../resources/styles.css">  
         <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-        <script type="text/javascript" src="../resources/projects.js"></script>
+        <script type="text/javascript" src="../resources/index.js"></script>
     </head>
-    <body class="contact">
-            
+    <body>
+            <h1>Testing</h1>
+            <div id="allProjects">
+                
+            </div>
     </body>
 </html>
 
