--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="links">
             <a class="first" href="resume/resume.html">Resume</a>
-            <a class="second">Projects</a>
+            <a class="second" href="projects/projects.html">Projects</a>
             <a class="third">Bio</a>
             <a class="fourth" href="contact/contact.html">Contact</a>
         </div>
