--- a/projects/projects.html
+++ b/projects/projects.html
@@ -16,7 +16,11 @@
     <body>
             <h1>Testing</h1>
             <div id="allProjects">
-                
+                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
+                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
+                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
+                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
+
             </div>
     </body>
 </html>
