Finished projects page

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -14,12 +14,10 @@
         <script type="text/javascript" src="../resources/index.js"></script>
     </head>
     <body>
-            <h1>Testing</h1>
+            <h1 class="projectsPage">Projects</h1>
             <div id="allProjects">
-                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
-                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
-                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
-                <a class="project">Gracie's Hanger<div class="rounded">Text placeholder. 2022</div><div class="line"></div></a>
+                <a class="project">Gracie's Hanger <div class="rounded">Text placeholder. 2022 djalkfdjslkjfalkdjkfjaldjfoadtdadrajtokaothaoktjsatasdokotastosd</div></a>
+                <a class="project r">Gracie's Hanger <div class="rounded">Text placeholder. 2022 djalkfdjslkjfalkdjkfjaldjfoadtdadrajtokaothaoktjsatasdokotastosd</div></a>
 
             </div>
     </body>
