--- a/contact/contact.html
+++ b/contact/contact.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="verticallyCentered">
-            <h1 class="contactPage">Contact me at:</h1>
+            <h1 class="underline">Contact me at:</h1>
             <a class="center right" href="https://www.linkedin.com/in/joshua-brunscheen/">LinkedIn</a>
             <a class="center left" href="https://github.com/josh-brunscheen">GitHub</a>
             <h2 class="center right">josh.brunscheen@gmail.com</h2>  
