--- a/projects/projects.html
+++ b/projects/projects.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="../resources/index.js"></script>
     </head>
     <body>
-            <h1 class="projectsPage">Projects</h1>
+            <h1 class="underline">Projects</h1>
             <div id="allProjects">
     
             </div>
