--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="links">
             <a class="first" href="resume/resume.html">Resume</a>
             <a class="second" href="projects/projects.html">Projects</a>
-            <a class="third">Bio</a>
+            <a class="third" href="bio/bio.html">Bio</a>
             <a class="fourth" href="contact/contact.html">Contact</a>
         </div>
 
