Fixed favicon bug

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="../resources/styles.css">  
-        <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../resources/favicon.ico">
     </head>
     <body>
         <div class="container">
