Made resume safer

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -18,12 +18,10 @@
                 <h2 class="first">- CS and ITWS Dual Major</h2>
                 <h2 class="second">- A in Data Structures</h2>
                 <h2 class="third">- Kaneland 2022 Salutatorian</h2>
-                <a class="fourth resumePage" href="JoshuaBrunscheenResume2023.pdf" download>(resume pdf download)</a>
+                <!-- <a class="fourth resumePage" href="JoshuaBrunscheenResume2023.pdf" download>(resume pdf download)</a> -->
             </div>
             
             <img id="resume" src="resume.png" alt="Joshua Brunscheen's resume" width="525.75" height="679.5"> 
         </div>
-        
-
     </body>
 </html>
